Refactored Factoids within the home page. Defined Formatted Messages using define message and create a new FACTOIDS array containing the ids of the text string to be used. Refactored factoid card layout to use flex order property instead of window.innerWidth. This helps with the pages responsivity, but there are still some issues (video size, alignment of factoids down column center) that are only fixed on page reload.

--- a/client/components/DetailViewContainer.scss
+++ b/client/components/DetailViewContainer.scss
@@ -27,6 +27,11 @@
 			margin: 0 2rem;
 			font-size: 1.75em;
 			font-weight: 100;
+			
+			@media (max-width: 800px) {
+				display: none;
+			}
+
 		}
 	}
 
@@ -81,6 +86,11 @@
 			flex-direction: row;
 			justify-content: center;
 			padding: 10px;
+			max-width: 600px;
+
+			@media (min-width: 800px) and (max-width: 1200px) {
+				order: 1;
+			}
 		}
 	}
 
@@ -94,18 +104,20 @@
 		box-sizing: border-box;
 		border-radius: 8px;
 		padding-right: 5px;
+		max-width: 600px;
 
-		&__small {
+		@media (max-width: 800px) {
 			width: 80vw;
 			min-height: 80vw;
 		}
 
-		&__medium {
+		@media (min-width: 800px) and (max-width: 1200px) {
 			width: 380px;
 			height: 380px;
+			order: 0;
 		}
 
-		&__large {
+		@media (min-width:  1200px) {
 			flex-grow: 1;
 		}
 	}
@@ -115,7 +127,8 @@
 		flex-direction: row;
 		flex-wrap: wrap;
 		justify-content: center;
-		padding: 0;
+		padding: 0 .5rem;
+		box-sizing: border-box;
 	}
 
 	&__factoid {
@@ -131,15 +144,18 @@
 		border-radius: 8px;
 		box-shadow: 0 0 16px 0 rgba(0, 0, 0, 0.16);
 
-		&__desktop {
+		@media (max-width: 800px) {
+			width: 80vw;
+			max-width: 25rem;
+			max-height: 20rem;
+			min-height: 80vw;	
+		}
+
+		@media (min-width: 800px) {
 			width: 380px;
 			height: 320px;
 		}
 
-		&__mobile {
-			width: 80vw;
-			min-height: 80vw;	
-		}
 
 		&__title {
 			font-size: 17px;
